--- a/css/style.css
+++ b/css/style.css
@@ -1503,3 +1503,7 @@ footer .credits a {
 .carousel-indicators{
   margin-bottom: -60px;
 }
+.col-xs{
+  padding-right: 20px;
+  padding-left: 20px;
+}
