--- a/css/style.css
+++ b/css/style.css
@@ -1507,3 +1507,34 @@ footer .credits a {
   padding-right: 20px;
   padding-left: 20px;
 }
+
+/* buttons filter */
+
+.filterDiv {
+  display: none; /* Hidden by default */
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: #101011;
+  padding: 12px 16px;
+  background-color: #101011;
+  margin-right: 0.5%;
+  margin-bottom: 3%;
+  margin-top: -2%;
+  cursor: pointer;
+}
+
+/* Add a light grey background on mouse-over */
+.btn:hover {
+  background-color: #668f1c;
+}
+.btn-dark.active{
+  background-color: wheat;
+}
