--- a/css/style.css
+++ b/css/style.css
@@ -1519,22 +1519,48 @@ footer .credits a {
   display: block;
 }
 
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: #101011;
-  padding: 12px 16px;
+/* CSS */
+.button-27 {
+  appearance: none;
   background-color: #101011;
-  margin-right: 0.5%;
-  margin-bottom: 3%;
-  margin-top: -2%;
+  border: 2px solid #1A1A1A;
+  border-radius: 10px;
+  box-sizing: border-box;
+  color: #FFFFFF;
   cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+  margin-bottom: 3%;
+  margin-top: -3%;
+  margin-right: 0.25%;
 }
 
-/* Add a light grey background on mouse-over */
-.btn:hover {
+.button-27:disabled {
+  pointer-events: none;
+}
+
+.button-27:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
   background-color: #668f1c;
 }
-.btn-dark.active{
-  background-color: wheat;
+
+.button-27:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
